--- a/index.html
+++ b/index.html
@@ -17,56 +17,55 @@
         </div>
     </nav>
     <div class="row">
-
         <div class="col s12 l7">
             <div class="card">
                 <div class="card-content">
                     <h5>Add Pantry Items</h5>
-                                <form>
-                                    <div class="row">
-                                        <div class="input-field col s4">
-                                            <input id="form-ingredient" type="text" class="validate">
-                                            <label for="password">Ingredient</label>
-                                        </div>
-                                        <div class="input-field col s2">
-                                            <input id="form-quantity" type="text" class="validate">
-                                            <label for="password">Quantity</label>
-                                        </div>
-                                        <div class="input-field col s3">
-                                            <select id="units">
-                                                <option value="" disabled selected class="form-unit">Choose Unit</option>
-                                                <option value="Teaspoon" class="form-unit">Teaspoon</option>
-                                                <option value="Tablespoon" class="form-unit">Tablespoon</option>
-                                                <option value="Fluid ounce" class="form-unit">Fluid ounce</option>
-                                                <option value="Cup" class="form-unit">Cup</option>
-                                                <option value="Pint" class="form-unit">Pint</option>
-                                                <option value="Quart" class="form-unit">Quart</option>
-                                                <option value="Gallon" class="form-unit">Gallon</option>
-                                                <option value="Piece" class="form-unit">Piece</option>
-                                            </select>
-                                        </div>
-                                        <div class="input-field col s3">
-                                            <a class="waves-effect waves-light btn blue-grey darken-1" id="form-addIngredient">Add to Pantry</a>
-                                        </div>
-                                    </div>
-                                </form>
-                                <h5>View Pantry Items</h5>
-                                <table class="bordered">
-                                    <thead>
-                                        <tr>
-                                            <th>Ingredient</th>
-                                            <th>Quantity</th>
-                                            <th>Unit</th>
-                                            <th>Cook Wit Deez</th>
-                                            <th>Remove Item</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="pantry-list">
-                                    </tbody>
-                                </table>
-                                <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a>
-                                <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnAmazon">Find on Amazon</a>
-                                <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnWalmart">Find on WalMart</a>
+                    <form>
+                        <div class="row">
+                            <div class="input-field col s4">
+                                <input id="form-ingredient" type="text" class="validate">
+                                <label for="password">Ingredient</label>
+                            </div>
+                            <div class="input-field col s2">
+                                <input id="form-quantity" type="text" class="validate">
+                                <label for="password">Quantity</label>
+                            </div>
+                            <div class="input-field col s3">
+                                <select id="units">
+                                    <option value="" disabled selected class="form-unit">Choose Unit</option>
+                                    <option value="Teaspoon" class="form-unit">Teaspoon</option>
+                                    <option value="Tablespoon" class="form-unit">Tablespoon</option>
+                                    <option value="Fluid ounce" class="form-unit">Fluid ounce</option>
+                                    <option value="Cup" class="form-unit">Cup</option>
+                                    <option value="Pint" class="form-unit">Pint</option>
+                                    <option value="Quart" class="form-unit">Quart</option>
+                                    <option value="Gallon" class="form-unit">Gallon</option>
+                                    <option value="Piece" class="form-unit">Piece</option>
+                                </select>
+                            </div>
+                            <div class="input-field col s3">
+                                <a class="waves-effect waves-light btn blue-grey darken-1" id="form-addIngredient">Add to Pantry</a>
+                            </div>
+                        </div>
+                    </form>
+                    <h5>View Pantry Items</h5>
+                    <table class="bordered">
+                        <thead>
+                            <tr>
+                                <th>Ingredient</th>
+                                <th>Quantity</th>
+                                <th>Unit</th>
+                                <th>Cook Wit Deez</th>
+                                <th>Remove Item</th>
+                            </tr>
+                        </thead>
+                        <tbody id="pantry-list">
+                        </tbody>
+                    </table>
+                    <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a>
+                    <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnAmazon">Find on Amazon</a>
+                    <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnWalmart">Find on WalMart</a>
                 </div>
             </div>
         </div>
@@ -125,8 +124,15 @@
         	    	    <a href="#" id="select">Search for Recipes</a>
         	    	</div>
         	    </div>
+                <div style="clear:both"></div>
         	</div>
         </div>
+    </div>
+    <div class="row">
+        <div class="card amazonDiv s12" style="min-width:1500px;"><span class="flow-text">Amazon Div</span></div>
+    </div>
+    <div class="row">
+        <div class="card walmartDiv s12" style="min-width:1500px;"><span class="flow-text">Walmart Div</span></div>
     </div>
     <div class="row" id="recipe-cards">
     </div>
