working sign in page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="nav-wrapper">
             <div class="container">
                 <a class="brand-logo center">Feed Yo Face   <small>Sweet Food Baby App</small></a>
+                <ul id="nav-mobile" class="right">
+                    <li><a class="waves-effect waves-light btn blue-grey darken-1" id="logOut"><i class="material-icons right">first_page</i>Log Out</a></li>
+                </ul>                
             </div>
         </div>
     </nav>
