--- a/signInPage.html
+++ b/signInPage.html
@@ -27,11 +27,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="col s4 offset-s2">
-                <a class="waves-effect waves-light btn blue-grey darken-1"><i class="material-icons left">computer</i>Log-In</a>
+              <div class="col s6 l4 offset-l2">
+                <a class="waves-effect waves-light btn blue-grey darken-1" id="logIn"><i class="material-icons left">computer</i>Log-In</a>
               </div>
-              <div class="col s4">
-                <a class="waves-effect waves-light btn blue-grey darken-1"><i class="material-icons right">create</i>Sign-Up</a>
+              <div class="col s6 l4">
+                <a class="waves-effect waves-light btn blue-grey darken-1" id="signUp"><i class="material-icons right">create</i>Sign-Up</a>
               </div>
             </div>
           </div>
