--- a/signInPage.html
+++ b/signInPage.html
@@ -27,6 +27,10 @@
               </div>
             </div>
             <div class="row">
+              <div class="col s12 l6 offset-l3" id="error">
+              </div>
+            </div>
+            <div class="row">
               <div class="col s6 l4 offset-l2">
                 <a class="waves-effect waves-light btn blue-grey darken-1" id="logIn"><i class="material-icons left">computer</i>Log-In</a>
               </div>
