--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="nav-wrapper">
             <div class="container">
                 <a class="brand-logo center">Feed Yo Face   <small>Sweet Food Baby App</small></a>
+                <ul id="nav-mobile" class="right">
+                    <li><a class="waves-effect waves-light btn blue-grey darken-1" id="logOut"><i class="material-icons right">first_page</i>Log Out</a></li>
+                </ul>                
             </div>
         </div>
     </nav>
@@ -31,7 +34,7 @@
                                 <input id="form-quantity" type="text" class="validate">
                                 <label for="password">Quantity</label>
                             </div>
-                            <div class="input-field col s3">
+                            <div class="input-field col s3 unitDropdown">
                                 <select id="units">
                                     <option value="" disabled selected class="form-unit">Choose Unit</option>
                                     <option value="Teaspoon" class="form-unit">Teaspoon</option>
@@ -45,7 +48,7 @@
                                 </select>
                             </div>
                             <div class="input-field col s3">
-                                <a class="waves-effect waves-light btn blue-grey darken-1" id="form-addIngredient">Add to Pantry</a>
+                                <input type="submit"  value="ADD TO PANTRY" class="waves-effect waves-light btn blue-grey darken-1" id="form-addIngredient">
                             </div>
                         </div>
                     </form>
@@ -56,7 +59,7 @@
                                 <th>Ingredient</th>
                                 <th>Quantity</th>
                                 <th>Unit</th>
-                                <th>Cook Wit Deez</th>
+                                <th><input type="checkbox" id="check0"/><label for="check0"></label>Cook Wit Deez</th>
                                 <th>Remove Item</th>
                             </tr>
                         </thead>
@@ -64,18 +67,18 @@
                         </tbody>
                     </table>
                     <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a>
-                    <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnAmazon">Find on Amazon</a>
-                    <a class="waves-effect waves-light btn blue-grey darken-1" id="findOnWalmart">Find on WalMart</a>
+                    <a href="#amazon-modal" class="waves-effect waves-light btn blue-grey darken-1 modal-trigger" id="findOnAmazon">Find on Amazon</a>
+                    <a href="#walmart-modal" class="waves-effect waves-light btn blue-grey darken-1 modal-trigger" id="findOnWalmart">Find on WalMart</a>
                 </div>
             </div>
         </div>
-    	<div class="col s12 l5">
-        	<div class="card mixingBowl">
-        	    <div class="card-content white-text">
-        	        <span class="card-title">Recipe Search</span>
-        	        <form>
-        	        	<div class ="col s12" id="ingredientList">
-							<label>Mixing Bowl <small>(Add ingredients from pantry)</small></label>
+        <div class="col s12 l5">
+            <div class="card mixingBowl">
+                <div class="card-content white-text">
+                    <span class="card-title">Recipe Search</span>
+                    <form>
+                        <div class ="col s12" id="ingredientList">
+                            <label>Mixing Bowl <small>(Add ingredients from pantry)</small></label>
                             <table class="bordered">
                                 <thead>
                                     <tr>
@@ -87,69 +90,89 @@
                                 </thead>
                                 <tbody id="mixingBowlList"></tbody>
                             </table>
-						</div>
-						<!-- <div class ="col s12">
+                        </div>
+                        <!-- <div class ="col s12">
                             <label>Please Exclude <small>(separate with commas)</small></label>
                             <input type="text" name="exclude" class="exclude">
                         </div> -->
-						<div class ="col s12" style="margin-top:20px;"><!--INLINE STYLING---------------------------------->
+                        <div class ="col s12" style="margin-top:20px;"><!--INLINE STYLING---------------------------------->
                             <br>
-							<label>Max Calories</label>
-							<input type="number" name="calories" class="calories" value="2000">
-						</div>
-						<div class="browser-default col s6">
-						    <select class="dropdown-menu courseDropdown" aria-labelledby="form-unit">
-						    	<option value="" disabled selected>Choose Type</option>
-						    	<option value="main+course" class="type">Main Course</option>
-								<option value="side+dish" class="type">Side Dish</option>
-								<option value="dessert" class="type">Dessert</option>
-								<option value="appetizer" class="type">Appetizer</option>
-								<option value="salad" class="type">Salad</option>
-						    </select>
-						</div>
-						<div class="browser-default col s4">
-						    <select class="dropdown-menu dietDropdown" aria-labelledby="form-unit">
-						    	<option value="" disabled selected>Choose Diet</option>
-						    	<option value="pescetarian" class="diet">Pescetarian</option>
-								<option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
-								<option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
-								<option value="vegan" class="diet">Vegan</option>
-								<option value="paleo" class="diet">Paleo</option>
-						    </select>
-						</div>
-        	        </form>
-        	    </div>
-        	    <div class="col s12">
-        	    	<div class="card-action">
-        	    	    <a href="#" id="select">Search for Recipes</a>
-        	    	</div>
-        	    </div>
+                            <label>Max Calories</label>
+                            <input type="number" name="calories" class="calories" value="2000">
+                        </div>
+                        <div class="browser-default col s6">
+                            <select class="dropdown-menu courseDropdown" aria-labelledby="form-unit">
+                                <option value="" disabled selected>Choose Type</option>
+                                <option value="main+course" class="type">Main Course</option>
+                                <option value="side+dish" class="type">Side Dish</option>
+                                <option value="dessert" class="type">Dessert</option>
+                                <option value="appetizer" class="type">Appetizer</option>
+                                <option value="salad" class="type">Salad</option>
+                            </select>
+                        </div>
+                        <div class="browser-default col s4">
+                            <select class="dropdown-menu dietDropdown" aria-labelledby="form-unit">
+                                <option value="" disabled selected>Choose Diet</option>
+                                <option value="pescetarian" class="diet">Pescetarian</option>
+                                <option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
+                                <option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
+                                <option value="vegan" class="diet">Vegan</option>
+                                <option value="paleo" class="diet">Paleo</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+                <div class="col s12">
+                    <div class="card-action">
+                        <a href="#" id="select">Search for Recipes</a>
+                    </div>
+                </div>
                 <div style="clear:both"></div>
-        	</div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="card amazonDiv s12" style="min-width: 1500px;"><span class="flow-text">Amazon Div</span></div>
+    <div class="container">
+        <div class="row" id="recipe-cards">
+        </div>
     </div>
+
+      <!-- Amazon Modal Structure -->
+      <div id="amazon-modal" class="modal">
+        <div class="modal-content">
+          <h4>Modal Header</h4>
+          <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+      </div>
+
+      <!-- Walmart Modal Structure -->
+      <div id="walmart-modal" class="modal">
+        <div class="row">
+            <div class="modal-content walmart-content"></div>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        </div>
+      </div> 
     <div class="row">
-        <div class="card walmartDiv s12" style="min-width: 1500px;"><span class="flow-text">Walmart Div</span></div>
-    </div>
-    <div class="row" id="recipe-cards">
+        <div class="card amazonDiv s12"><span class="flow-text">Amazon Div</span></div>
     </div>
     <footer class="page-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<h5 class="white-text">Random Food Joke</h5>
-					<p class="grey-text text-lighten-4" id="joke"></p>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				© 2017 Team Whatever Our Name Is
-			</div>
-		</div>
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h5 class="white-text">Random Food Joke</h5>
+                    <p class="grey-text text-lighten-4" id="joke"></p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2017 Team Whatever Our Name Is
+            </div>
+        </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
