--- a/index.html
+++ b/index.html
@@ -3,53 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Feed Yo Face</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="assets/css/style.css" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 </head>
 <body>
-    <nav>
+    <header>
+        <nav>
         <div class="nav-wrapper">
             <div class="container">
-                <a class="brand-logo center">Feed Yo Face   <small>Sweet Food Baby App</small></a>
-                <ul id="nav-mobile" class="right">
-                    <li><a class="waves-effect waves-light btn blue-grey darken-1" id="logOut"><i class="material-icons right">first_page</i>Log Out</a></li>
-                </ul>                
+                <a class="brand-logo left">Feed Yo Face <small>Sweet Food Baby App</small></a>
+                <ul class="right" id="nav-mobile">
+                    <li>
+                        <a class="waves-effect waves-light btn blue-grey darken-1" id="logOut"><i class="material-icons right">first_page</i>Log Out</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
-    <div class="row">
-        
+    </header>
+    <main class="container">
+        <div class="row">
         <div class="col s12 pantryDiv">
-            <div class="card ">
+            <div class="card">
                 <div class="card-content">
                     <h5>Add Pantry Items</h5>
                     <form>
                         <div class="row">
                             <div class="input-field col s4">
-                                <input id="form-ingredient" type="text" class="validate">
-                                <label for="form-ingredient">Ingredient</label>
+                                <input class="validate" id="form-ingredient" type="text"> <label for="form-ingredient">Ingredient</label>
                             </div>
                             <div class="input-field col s2">
-                                <input id="form-quantity" type="text" class="validate">
-                                <label for="form-quantity">Quantity</label>
+                                <input class="validate" id="form-quantity" type="text"> <label for="form-quantity">Quantity</label>
                             </div>
                             <div class="input-field col s3 unitDropdown">
                                 <select id="units">
-                                    <option value="" disabled selected class="form-unit">Choose Unit</option>
-                                    <option value="Teaspoon" class="form-unit">Teaspoon</option>
-                                    <option value="Tablespoon" class="form-unit">Tablespoon</option>
-                                    <option value="Fluid ounce" class="form-unit">Fluid ounce</option>
-                                    <option value="Cup" class="form-unit">Cup</option>
-                                    <option value="Pint" class="form-unit">Pint</option>
-                                    <option value="Quart" class="form-unit">Quart</option>
-                                    <option value="Gallon" class="form-unit">Gallon</option>
-                                    <option value="Piece" class="form-unit">Piece</option>
+                                    <option class="form-unit" disabled selected value="">Choose Unit
+                                    </option>
+                                    <option class="form-unit" value="Teaspoon">Teaspoon
+                                    </option>
+                                    <option class="form-unit" value="Tablespoon">Tablespoon
+                                    </option>
+                                    <option class="form-unit" value="Fluid ounce">Fluid ounce
+                                    </option>
+                                    <option class="form-unit" value="Cup">Cup
+                                    </option>
+                                    <option class="form-unit" value="Pint">Pint
+                                    </option>
+                                    <option class="form-unit" value="Quart">Quart
+                                    </option>
+                                    <option class="form-unit" value="Gallon">Gallon
+                                    </option>
+                                    <option class="form-unit" value="Piece">Piece
+                                    </option>
                                 </select>
                             </div>
                             <div class="input-field col s3">
-                                <input type="submit"  value="ADD TO PANTRY" class="waves-effect waves-light btn blue-grey darken-1" id="form-addIngredient">
+                                <input class="waves-effect waves-light btn blue darken-1" id="form-addIngredient" type="submit" value="ADD TO PANTRY">
                             </div>
                         </div>
                     </form>
@@ -60,57 +71,63 @@
                                 <th>Ingredient</th>
                                 <th>Quantity</th>
                                 <th>Unit</th>
-                                <th><input type="checkbox" id="check0"/><label for="check0"></label>Cook Wit Deez</th>
+                                <th><input id="check0" type="checkbox"><label for="check0"></label>Cook Wit Deez</th>
                                 <th></th>
                                 <th>Remove Item</th>
                             </tr>
                         </thead>
-                        <tbody id="pantry-list">
-                        </tbody>
+                        <tbody id="pantry-list"></tbody>
                     </table>
-                   <div class="row">
-                        <div class ="col s4"><!--INLINE STYLING---------------------------------->
+                    <div class="row">
+                        <div class="col s4">
+                            <!--INLINE STYLING================================-->
                             <br>
-                            <h5>Max Calories</h5>
-                            <input type="number" name="calories" class="calories" value="2000">
+                            <h5>Max Calories</h5><input class="calories" name="calories" type="number" value="2000">
                         </div>
                         <div class="browser-default col s4">
                             <br>
-                            <h5>Course Type</h5>
-                            <select class="dropdown-menu courseDropdown" aria-labelledby="form-unit">
-                                <option value="" disabled selected>Choose Type</option>
-                                <option value="main+course" class="type">Main Course</option>
-                                <option value="side+dish" class="type">Side Dish</option>
-                                <option value="dessert" class="type">Dessert</option>
-                                <option value="appetizer" class="type">Appetizer</option>
-                                <option value="salad" class="type">Salad</option>
+                            <h5>Course Type</h5><select aria-labelledby="form-unit" class="dropdown-menu courseDropdown">
+                                <option disabled selected value="">Choose Type
+                                </option>
+                                <option class="type" value="main+course">Main Course
+                                </option>
+                                <option class="type" value="side+dish">Side Dish
+                                </option>
+                                <option class="type" value="dessert">Dessert
+                                </option>
+                                <option class="type" value="appetizer">Appetizer
+                                </option>
+                                <option class="type" value="salad">Salad
+                                </option>
                             </select>
                         </div>
                         <div class="browser-default col s4">
                             <br>
-                            <h5>Diet</h5>
-                            <select class="dropdown-menu dietDropdown" aria-labelledby="form-unit">
-                                <option value="" disabled selected>Choose Diet</option>
-                                <option value="pescetarian" class="diet">Pescetarian</option>
-                                <option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
-                                <option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
-                                <option value="vegan" class="diet">Vegan</option>
-                                <option value="paleo" class="diet">Paleo</option>
+                            <h5>Diet</h5><select aria-labelledby="form-unit" class="dropdown-menu dietDropdown">
+                                <option disabled selected value="">Choose Diet
+                                </option>
+                                <option class="diet" value="pescetarian">Pescetarian
+                                </option>
+                                <option class="diet" value="lacto+vegetarian">Lacto Vegetarian
+                                </option>
+                                <option class="diet" value="ovo+vegetarian">Ovo Vegetarian
+                                </option>
+                                <option class="diet" value="vegan">Vegan
+                                </option>
+                                <option class="diet" value="paleo">Paleo
+                                </option>
                             </select>
                         </div>
-                   </div>
-                        <div class="row">
-                            <div style="text-align:center;">
-                                <!-- <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a> -->
-                                <a class="waves-effect waves-light btn blue-grey darken-1  searchButton" id="select">Search For Recipes</a>
-                                <a href="#walmart-modal" class="waves-effect waves-light btn blue-grey darken-1 modal-trigger  searchButton" id="findOnWalmart">Find on WalMart</a>
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div style="text-align:center;">
+                            <!-- <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a> -->
+                            <a class="waves-effect waves-light btn blue darken-1 searchButton disabled" id="select">Search For Recipes</a> <a class="waves-effect waves-light btn blue darken-1 modal-trigger searchButton disabled" href="#walmart-modal" id="findOnWalmart">Find on WalMart</a>
                         </div>
-                    
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="col s12 l5 mixingBowlDiv">
+        </div><!-- <div class="col s12 l5 mixingBowlDiv">
             <div class="card mixingBowl">
                 <div class="card-content white-text">
                     <span class="card-title">Recipe Search</span>
@@ -133,7 +150,7 @@
                             <label>Please Exclude <small>(separate with commas)</small></label>
                             <input type="text" name="exclude" class="exclude">
                         </div>
-                        <div class ="col s12" style="margin-top:20px;">INLINE STYLING--------------------------------
+                        <div class ="col s12" style="margin-top:20px;">INLINE STYLING================================
                             <br>
                             <label>Max Calories</label>
                             <input type="number" name="calories" class="calories" value="2000">
@@ -169,31 +186,42 @@
             </div>
         </div> -->
     </div>
-    <div class="container">
-        <div class="row" id="recipe-cards">
+    <div class="row">
+        <div>
+            <ul class="pagination center">
+                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="disabled"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+              </ul>
+        </div>
+        <div id="recipe-cards">
+        </div>
+        <div>
+            <!-- Amazon Modal Structure
+            <div class="modal" id="amazon-modal">
+                <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
+                </div>
+                <div class="modal-footer">
+                    <a class="modal-action modal-close waves-effect waves-green btn-flat" href="#!">Agree</a>
+                </div> -->
+            </div><!-- Walmart Modal Structure -->
+            <div class="modal" id="walmart-modal">
+                <div class="modal-header right-align">
+                    <a class="modal-action modal-close waves-effect waves-green btn-flat" href="#!">Close</a>
+                </div>
+                <div class="row">
+                    <div class="modal-content walmart-content"></div>
+                </div>
+            </div>
         </div>
     </div>
-
-      <!-- Amazon Modal Structure -->
-      <div id="amazon-modal" class="modal">
-        <div class="modal-content">
-          <h4>Modal Header</h4>
-          <p>A bunch of text</p>
-        </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
-      </div>
-
-      <!-- Walmart Modal Structure -->
-      <div id="walmart-modal" class="modal">
-        <div class="modal-header right-align">
-          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-        </div>
-        <div class="row">
-            <div class="modal-content walmart-content"></div>
-        </div>
-      </div> 
+    </main>
     <footer class="page-footer">
         <div class="container">
             <div class="row">
@@ -205,14 +233,17 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2017 Team Whatever Our Name Is
+                © 2017 T34m RaWr SqU4d
             </div>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
+    </script> 
+    <script src="assets/javascript/app.js" type="text/javascript">
+    </script> 
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js">
+    </script>
 </body>
-
 </html>
